--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
-    <title>js-array-objects-carousel</title>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <title>vue-slider</title>
 </head>
 <body>
 
-    <main class="vh-100 bg-warning-subtle">
+    <main id="app" class="vh-100 bg-warning-subtle">
 
         <div class="container h-100">
 
@@ -20,6 +21,14 @@
                 <div class="col-10">
 
                     <div id="carousel_container" class="position-relative m-auto border border-dark">
+
+                        <div class="carousel_img_container position-absolute top-0 start-0 ${imageClasses}">
+                            <img src="" alt="" class="w-100 h-100">
+                            <div class="carousel_text_container ps-2 text-white">
+                                <h4></h4>
+                                <p></p>
+                            </div>
+                        </div>
 
                         <div id="carousel_btn_container" class="d-flex justify-content-between">
 
